--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"author": "Boris",
+	"description": "Project that does something awesome",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
